--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,17 @@
 # SQLite version 3.x
 #   gem install sqlite3
+#development:
+  #adapter: sqlite3
+  #database: db/development.sqlite3
+  #pool: 5
+  #timeout: 5000
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  database: biosensor_dev
   pool: 5
-  timeout: 5000
+  username: root
+  password:
+  hostA: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
